# Affiliate-Comparison-Platform

./: .gitignore  .prettierignore  BrandBook.md  DISCLOSURE.md  Feature.md  PRIVACY.md  ProjectPrompt.md  README.md  TERMS.md  pyrightconfig.json
backend/: .env.example  README.md  check_images.py  check_top_images.py  pyproject.toml  requirements.txt  seed_currencies.py
backend/app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/ai/: helper.py  llm.py  matching.py
backend/app/ai/metadataagent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/ai/searchagent/: __init__.py  grapg.py  graph.py  nodes.py  prompt.py  state.py  tools.py
backend/app/ai/setbuilder/: graph.py  state.py
backend/app/core/: scheduler.py
backend/app/routers/: __init__.py  affiliate.py  auth.py  categories.py  currencies.py  ebay.py  products.py  scraper.py  serper.py
backend/app/scrapers/: base.py  lazada_scraper.py  sample.py  shopee_scraper.py
backend/app/security/: hmac_auth.py
backend/app/services/: __init__.py  currency_service.py  ebay_service.py  serper_service.py  storage_service.py
backend/scripts/: check_column.py  fix_missing_column.py  fix_status.txt  generate_hmac.py
frontend/: package-lock.json  package.json  signin.html  signup.html  wrangler.jsonc
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx  robots.ts  sitemap.ts
frontend/src/context/: CurrencyContext.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
scripts/: download_stitch.py  html_to_jsx.py
(+31 files in other folders)
